# rust_webapp

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  bonnie.toml  docker-compose.yml  input.css
.github/workflows/: web_setup.yml
api/: Cargo.toml  Dockerfile  bonnie.toml
api/src/: main.rs
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Cargo.toml  Dioxus.toml  Dockerfile  bonnie.toml  input.css  tailwind.config.js
frontend/public/: tailwind.css
frontend/src/: main.rs
public/: tailwind.css
src/: main.rs  test.rs  test2.rs
