[package]
name = "rust_webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
dioxus = "0.3.2"
dioxus-free-icons = "0.6.0"
dioxus-ssr = "0.3.0"
dioxus-web = "0.3.2"
tokio = { version = "1.28.2", features = ["full"] }
