[package]
name = "rust_webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-free-icons = { version = "0.6.0", features = ["ionicons"] }
dioxus-router = "0.3.0"
dioxus-ssr = "0.3.0"
dioxus-web = "0.3.2"
tokio = "1.28.2"
